laborations/lab2/testsuite/good/return_in_block_block.cc
int niam() {
  {{{{{
    {{{{{
      return 99;
    }}}}}
    printInt(2);
  }}}}}
  printInt(1);
}

int main() {
  {{{{{
    {{{{{
      printInt(niam());
      return 0;
    }}}}}
    printInt(3);
  }}}}}
  printInt(4);
}
