laborations/lab2/testsuite/bad/bad/fun_app_incorrect_type_built_in.cc
int main() {
  printDouble(99);
  return 0;
}
